[tool.poetry]
name = "raspiland"
version = "0.1.0"
description = ""
authors = ["Yurii Voderatskyi <voderatskiy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
ansible = "^2.9.7"
pyyaml = "^5.3.1"
jinja2 = "^2.11.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
